crates/analyzer/tests/snapshots/errors__ambiguous_traits2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: multiple applicable items in scope
   ┌─ compile_errors/ambiguous_traits2.fe:6:6
   │
 6 │   fn do(self) {
   │      ^^ candidate #2 is defined here on the `struct`
   ·
12 │   fn do(self) {
   │      ^^ candidate #1 is defined here on the `impl`
   │
   = Hint: rename one of the methods to disambiguate


