crates/analyzer/tests/snapshots/errors__ambiguous_traits3.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: multiple applicable items in scope
   ┌─ compile_errors/ambiguous_traits3.fe:11:6
   │
11 │   fn do() {
   │      ^^ candidate #1 is defined here on trait `DoThing`
   ·
16 │   fn do() {
   │      ^^ candidate #2 is defined here on trait `DoOtherThing`
   │
   = Hint: Rename one of the methods or make sure only one of them is in scope


