crates/analyzer/tests/snapshots/errors__array_constructor_call.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: cannot find value `u8` in this scope
  ┌─ [snippet]:3:3
  │
3 │   u8[3]([1, 2, 3])
  │   ^^ undefined


