crates/analyzer/tests/snapshots/errors__array_mixed_types.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: type mismatch
  ┌─ [snippet]:3:23
  │
3 │   let x: u16[3] = [1, address(0), "hi"]
  │                       ^^^^^^^^^^ this has type `address`; expected type `u16`

error: type mismatch
  ┌─ [snippet]:3:35
  │
3 │   let x: u16[3] = [1, address(0), "hi"]
  │                                   ^^^^ this has type `String<2>`; expected type `u16`


