crates/analyzer/tests/snapshots/errors__assert_sto_msg_no_copy.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: value must be copied to memory
  ┌─ compile_errors/assert_sto_msg_no_copy.fe:5:23
  │
5 │         assert false, self.my_string
  │                       ^^^^^^^^^^^^^^ this value is in storage
  │
  = Hint: values located in storage can be copied to memory using the `to_mem` function.
  = Example: `self.my_array.to_mem()`


